# container-minecraft-app

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  changelog.config.js  fastapi.Dockerfile  fastapi.dockerignore  package-lock.json  package.json  renovate.json
api/: .lintstagedrc.json  .pylintrc  Pipfile  README.md  auth.py  lint-schema.sh  lint-staged.config.js  logging.yaml  main.py  manage.py  modpack.py  mutation.py  mutmut_config.py  pyproject.toml  query.py  schema.py  schema_test.py  server.py  server_test.py  settings.py
api/djangoapp/: oidc_provider_settings.py  settings.py  urls.py
api/djangoapp/app/: admin.py  apps.py  models.py
api/djangoapp/app/management/commands/: createrelyingparty.py
api/djangoapp/app/migrations/: 0001_initial.py
api/modpack/: __init__.py  model.py  modpack_external_api_test.py  modpack_test.py  schema.py
api/server/: __init__.py  abstract_server.py  docker_server.py  docker_server_test.py  image.py  image_test.py  kube_server.py  model.py  port.py  port_test.py  schema.py  server_test.py  volume.py
api/src/: auth.py  settings.py
api/src/modpack/: __init__.py  model.py  modpack_external_api_test.py  modpack_test.py  schema.py
api/src/schema/: __init__.py  schema_test.py
api/src/server/: __init__.py  docker_server.py  image.py  image_test.py  kube_server.py  model.py  port.py  port_test.py  schema.py  volume.py
api/src/version/: model.py  version_test.py
api/version/: __init__.py  version_test.py
app/: .env.development  .env.production  .eslintignore  .eslintrc.js  .lintstagedrc.json  cypress.config.ts  eslint.config.js  index.html  jest.config.ts  lint-staged.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.js
docs/: config.toml  package-lock.json  package.json  (+1 more)
(+78 files in other folders)
