[project]
name = ""
version = "0.0.1"
requires-python = "==3.14.*"
dependencies = [
    "cachetools==7.1.0",
    "docker==7.1.0",
    "kubernetes==27.2.0",
    "packaging==26.2",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "python-jose[cryptography]==3.5.0",
    "strawberry-graphql[cli, fastapi]==0.315.3",
    "uvicorn[standard]==0.46.0",
]

[dependency-groups]
dev = [
    "autopep8",
    "pylint",
    "pytest",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
