[project]
name = "container-minecraft-app"
version = "0.0.1"
requires-python = "==3.14.*"
dependencies = [
    "cachetools==7.1.4",
    "docker==7.2.0",
    "kubernetes==27.2.0",
    "packaging==26.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "python-jose[cryptography]==3.5.0",
    "strawberry-graphql[cli, fastapi]==0.321.0",
    "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = [
    "autopep8",
    "pylint",
    "pytest",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
